crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completes_dot_member_access.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
---
[
    CompletionItem {
        label: "data",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "data",
                del: 141..141,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "inner",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "inner",
                del: 141..141,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "u1",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "u1",
                del: 141..141,
            },
        ),
        snippet_edit: None,
    },
]
