crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completes_first_ordered_param_assign_at_token_end.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
---
[
    CompletionItem {
        label: "P4",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "P4",
                del: 137..138,
            },
        ),
        snippet_edit: None,
    },
]
