crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completes_non_ansi_port_list_names.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
---
[
    CompletionItem {
        label: "a",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "a",
                del: 15..15,
            },
        ),
        snippet_edit: None,
    },
    CompletionItem {
        label: "b",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "b",
                del: 15..15,
            },
        ),
        snippet_edit: None,
    },
]
