crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completes_ordered_param_assign_expr_by_width.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
---
[
    CompletionItem {
        label: "P8",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "P8",
                del: 141..141,
            },
        ),
        snippet_edit: None,
    },
]
