crates/ide/src/completion/engine/snapshots/ide__completion__engine__tests__completes_ordered_port_connection_expr_by_width.snap
---
source: crates/ide/src/completion/engine/tests.rs
expression: items
---
[
    CompletionItem {
        label: "sig8",
        kind: Text,
        edit: Some(
            TextEditItem {
                ins: "sig8",
                del: 118..118,
            },
        ),
        snippet_edit: None,
    },
]
